1.添加sqlite支持 2.修复macos字体问题 3.更新connectUi